--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,10 @@
       "js": ["content.js"]
     }
   ],
-  "page_action": {
-    "default_popup": "popup.html",
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "browser_action": {
     "default_icon": {
       "16": "images/icon16.png",
       "32": "images/icon32.png",
