--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "CoronaReplacer",
+  "name": "Corona Eraser",
   "version": "0.001",
   "content_scripts": [
     {
@@ -13,7 +13,7 @@
   },
   "browser_action": {
     "default_popup": "src/popup/index.html",
-    "default_title": "a popup will come here",
+    "default_title": "Corona Eraser",
     "default_icon": {
       "16": "assets/images/icon16.png",
       "32": "assets/images/icon32.png",
